@@ -90,8 +90,7 @@ extern void cli(void);
 
 #ifdef __cplusplus
 #define ISR(vector)					\
-extern "C" void vector(void);				\
-void vector (void) __attribute__ ((signal));		\
+extern "C" void vector(void) __attribute__ ((signal));	\
 void vector (void)
 #else
 #define ISR(vector)					\
@@ -114,8 +113,7 @@ void vector (void)
 
 #ifdef __cplusplus
 #define SIGNAL(signame)					\
-extern "C" void signame(void);				\
-void signame (void) __attribute__ ((signal));		\
+extern "C" void signame(void) __attribute__ ((signal));	\
 void signame (void)
 #else
 #define SIGNAL(signame)					\
@@ -136,8 +134,7 @@ void signame (void)
 
 #ifdef __cplusplus
 #define EMPTY_INTERRUPT(vector)                \
-extern "C" void vector(void);                  \
-void vector (void) __attribute__ ((naked));    \
+extern "C" void vector(void) __attribute__ ((naked));    \
 void vector (void) {  __asm__ __volatile__ ("reti" ::); }
 #else
 #define EMPTY_INTERRUPT(vector)                \
